Implementacion de "Crear factura"

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/ver_detalle_cobro.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/ver_detalle_cobro.html
@@ -7,7 +7,7 @@
 				<div class="card-body">
 					<center> 
 						 <h2 style="font-family: Bodoni;">
-							 <b class="bi bi-ticket-detailed"></>Detalle del Cobro realizado</b>
+							 <b class="bi bi-ticket-detailed">Detalle del Cobro realizado</b>
 						</h2>
 					 </center>
 				<br>
@@ -57,7 +57,7 @@
 				<br>
 				<hr>
 				<div align="center">
-					<a  href="/cobros/ingresar_datos_factura/{{cobro.id_cobro_contado}}" class="btn btn-primary">
+					<a  href="/cobros/ingresar_datos_factura/{{cobro.get_id_cobro}}" class="btn btn-primary">
 						<i class="bi bi-printer"></i> 
 						Factura
 				   </a>
