--- a/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/ingresar_datos_factura.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/ingresar_datos_factura.html
@@ -16,39 +16,38 @@
             </div>
         </center>
         <div class="card-body">
-            <form method="POST">
+            <form action="" method="POST">
                 {%csrf_token%}
                 <div style="margin: 20px;">
-                    <table>
-                        <br>
-                        <div class="form-group">  <!--style="float: left; width: 80%;"> -->
-                            <label for="{{form.numero_documento.name}}"><b>{{form.numero_documento.label}}</b>  </label>
-                            {{form.numero_documento}}
-                        </div>
-                        <br>
-                        <!-- <div class="form-group" style="float: right; width: 12%;">
-                            <label for="{{form.dv.name}}"><b>{{form.dv.label}}</b> </label>
-                            {{form.dv}}
-                        </div> -->
-                        <div class="form-group">
-                            <label for="{{form.razon_social.name}}"><b>{{form.razon_social.label}}</b> </label>
-                            {{form.razon_social}}
-                        </div>
-                        <br>
-                        <div class="form-group">
-                            <label for="{{form2.direccion.name}}"><b>{{form2.direccion.label}}</b></label>
-                            {{form2.direccion}}
-                        </div>
-                        <br>
-                        <div class="form-group">
-                            <label for="{{form2.telefono.name}}"><b>{{form2.telefono.label}}</b></label>
-                            {{form2.telefono}}
-                        </div>
-                    </table>
                     <br>
-                    <h4 style="color: white; background-color: lightskyblue;" align="center">
-                        Detalles de Facturación
-                    </h4>
+                    <div class="form-group">  <!--style="float: left; width: 80%;"> -->
+                        <label for="{{form.numero_documento.name}}"><b>{{form.numero_documento.label}}</b>  </label>
+                        {{form.numero_documento}}
+                    </div>
+                    <br>
+                    <!-- <div class="form-group" style="float: right; width: 12%;">
+                        <label for="{{form.dv.name}}"><b>{{form.dv.label}}</b> </label>
+                        {{form.dv}}
+                    </div> -->
+                    <div class="form-group">
+                        <label for="{{form.razon_social.name}}"><b>{{form.razon_social.label}}</b> </label>
+                        {{form.razon_social}}
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="{{form.direccion.name}}"><b>{{form.direccion.label}}</b></label>
+                        {{form.direccion}}
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <label for="{{form.telefono.name}}"><b>{{form.telefono.label}}</b></label>
+                        {{form.telefono}}
+                    </div>
+                </div>
+                <h4 style="color: white; background-color: lightskyblue;" align="center">
+                    Detalles de Facturación
+                </h4>
+                <div style="margin: 20px;">
                     <table class="table table-striped table-hover">
                         <thead>
                             <tr>
@@ -73,24 +72,31 @@
                                 </tr>
                             {%else%}
                                 <h5>
-                                    <!-- No hay valores que mostrar -->
+                                    No hay valores que mostrar
                                 </h5>
                             {%endif%}
                         </tbody>
                     </table>
                 </div>
+                <div align="center">
+                    <!-- <a type="submit" href="/cobros/generar_factura/" target="_blank" class="btn btn-outline-primary">
+                        <i class="bi bi-file-pdf"></i>
+                        Generar factura
+                    </a> -->
+                    <button type="submit" target="_blank" class="btn btn-outline-primary">
+                        <i class="bi bi-file-pdf"></i>
+                        Generar factura
+                    </button>
+                    &nbsp;&nbsp;
+                    <a onclick="history.back()" class="btn btn-outline-danger">
+                        <i class="bi bi-back"></i>
+                        Atrás
+                    </a>
+                </div>
+                
             </form>
-            <div align="center">
-                <a button="submit" href="/cobros/generar_factura/" target="_blank" class="btn btn-outline-primary">
-                    <i class="bi bi-file-pdf"></i>
-                    Generar factura
-                </a>
-                &nbsp;&nbsp;
-                <a onclick="history.back()" class="btn btn-outline-danger">
-                    <i class="bi bi-back"></i>
-                    Atrás
-                </a>
-            </div>
+            <br>
+            
         </div>
     </div>
 </div>
