informe de historial_clinico por paciente

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -132,7 +132,7 @@
                                               <td>
                                                     {%if perms.gestion_agendamiento.change_cita%}
                                                         {%if c.estado_tratamiento%}
-                                                        <a href="/agendamiento/visualizar_cita/{{c.id_cita}}" class="btn btn-primary">
+                                                        <a href="/agendamiento/visualizar_cita/{{c.id_cita}}" class="btn btn-secondary">
                                                             <i class="bi bi-card-checklist"></i>
                                                             Visualizar
                                                         </a>
