--- a/Proyecto2/SmileSoft/gestion_historial_clinico/templates/listar_historial_clinico.html
+++ b/Proyecto2/SmileSoft/gestion_historial_clinico/templates/listar_historial_clinico.html
@@ -7,7 +7,7 @@
 				<center>
                     <h1 style=" font-family: Lucida Calligraphy;">
                         <i class="bi bi-file-earmark-medical-fill"></i>
-                        Historial clinico de {{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}
+                        Historial Clinico {{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}
                         </i>
                     </h1> 
                 </center>
