--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos_asignados.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos_asignados.html
@@ -18,14 +18,14 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h1 style="font-family: Bodoni;">
+                    <h1 style="font-family: Lucida Calligraphy;">
                         <b>Tratamiento </b>
                     </h1>
-                  <h3 style="font-family: Bodoni;"> 
+                  <h2 style="font-family: Bodoni;"> 
                     <FONT SIZE="5" style="color:blue;"> 
                         <i><b>{{tratamiento.nombre_tratamiento}}</b></i>
                     </FONT>
-                </h3>
+                </h2>
                 </center>
                 <br>
 
