--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_cargo.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_cargo.html
@@ -6,8 +6,8 @@
     <div class="card">
         <div class="card-body">
             <center>  
-                <h1 style="font-family: Lucida Calligraphy;">
-                    <b class="bi-clipboard-check">Listado de Cargos</b>
+                <h2 style="font-family: Lucida Calligraphy;">
+                    <b class="bi-clipboard-check">Lista de Cargos</b>
                 </h2> 
             </center>
             <table  align="right">
