--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_especialidad.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_especialidad.html
@@ -6,9 +6,9 @@
     <div class="card">
         <div class="card-body">
             <center>  
-                <h1 style="font-family: Lucida Calligraphy;">
-                    <b class="bi bi-clipboard2-check">Listado de Especialidades</b>
-                </h1> 
+                <h2 style="font-family: Lucida Calligraphy;">
+                    <b class="bi bi-clipboard2-check">Lista de Especialidades</b>
+                </h2>
             </center>
             <table  align="right">
                 <tr>
