--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_especialista_salud.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_especialista_salud.html
@@ -6,12 +6,11 @@
 			<div class="card">
 				<div class="card-body">
 					<center>  
-						<h1 style="font-family: Lucida Calligraphy;"> 
+						<h2 style="font-family: Lucida Calligraphy;"> 
 							<b class="bi-file-earmark-medical">
-								Listado de <br>
-								Especialistas de salud
+								Lista de Especialistas <br> de salud
 							</b >
-						</h1> 
+						</h2> 
 					</center>
 
 				<table  align="right" >
