--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_proveedor.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_proveedor.html
@@ -6,9 +6,9 @@
 			<div class="card">
 				<div class="card-body">
 					<center>
-						<h1 style="font-family: Lucida Calligraphy;">
-							 <b class="bi-truck">Listado de Proveedores</b>
-						</h1> 
+						<h2 style="font-family: Lucida Calligraphy;">
+							 <b class="bi-truck">Lista de Proveedores</b>
+						</h2> 
 						</center>
 
 					<table  align="right" >
