--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -20,7 +20,11 @@
             <div class="card-body">
                     <center> 
                         
-                        <h2  style="color:blue;" <i class="bi bi-calendar2-week"> Citas Reservadas </i> </h2>
+                        <h2  style="font-family: Lucida Calligraphy;">
+                            <b class="bi bi-calendar2-week">
+                                Citas Reservadas 
+                            </b> 
+                        </h2>
                     </center>
               
                 <table  align="right" >
