--- a/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobros_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobros_pendientes.html
@@ -5,9 +5,9 @@
 		<div class="card">
 			<div class="card-body">
 				<center>  
-					<h1 style=" font-family: Lucida Calligraphy;">
-						 <b class="bi bi-currency-dollar">Pacientes con Cobros Pendientes</b>
-						</h1> 
+					<h2 style=" font-family: Lucida Calligraphy;">
+						 <b class="bi bi-cash-stack">Pacientes con Cobros Pendientes</b>
+					</h2> 
 					</center>
 			
 				<br>
