--- a/Proyecto2/SmileSoft/gestion_historial_clinico/templates/ver_mi_historial_clinico.html
+++ b/Proyecto2/SmileSoft/gestion_historial_clinico/templates/ver_mi_historial_clinico.html
@@ -7,9 +7,11 @@
 				<div class="card-body">
 					{% if historial %}
 						<center>
-							<h2>
-								<i class="bi bi-file-earmark-medical-fill"></i>
-								Historial clinico de {{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}
+							<h2 style="font-family: Lucida Calligraphy;">
+								<b class="bi bi-file-earmark-medical-fill">
+									Historial clinico de {{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}
+								</b>
+								
 								</i>
 							</h2> 
 						</center>
