--- a/Proyecto2/SmileSoft/webapp/templates/usuario/listar_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/listar_usuario.html
@@ -20,9 +20,9 @@
         <div class="card">
             <div class="card-body">
                     <center> 
-                        <h1 style="font-family: Lucida Calligraphy;"> 
-                            <i class="bi bi-people-fill">Listado de Usuarios</i> 
-                        </h1>
+                        <h2 style="font-family: Lucida Calligraphy;"> 
+                            <b class="bi bi-people-fill">Listado de Usuarios</b> 
+                        </h2>
                     </center>
                 <!--fILA de la funcion Agregar usuario-->
                 <table  align="right" >
