--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_funcionario.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_funcionario.html
@@ -6,9 +6,9 @@
 		<div class="card">
 			<div class="card-body">
 				<center>  
-					<h1 style="font-family: Lucida Calligraphy;"> 
-						<b class="bi-person-check-fill">Listado de Funcionarios</b>
-					</h1> 
+					<h2 style="font-family: Lucida Calligraphy;"> 
+						<b class="bi-person-check-fill">Lista de Funcionarios</b>
+					</h2> 
 				</center>
 
 					<table  align="right" >
