--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_persona.html
@@ -6,9 +6,9 @@
 			<div class="card">
 				<div class="card-body">
 					<center>  
-						<h1 style="font-family: Lucida Calligraphy;"> 
-							<b class="bi bi-people-fill">Listado de Personas</b>
-						</h1> 
+						<h2 style="font-family: Lucida Calligraphy;"> 
+							<b class="bi bi-people-fill">Lista de Personas</b>
+						</h2>
 					</center>    
 					<table  align="right" >
 						<tr>
