--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/horarios_lista.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/horarios_lista.html
@@ -22,8 +22,11 @@
         <div class="card">
             <div class="card-body">
                     <center> 
-                        
-                        <h2 <i class="bi bi-alarm"></i> Horarios  </h2>
+                        <h2 style="font-family: Lucida Calligraphy;"> 
+                            <b class="bi bi-alarm">
+                                Horarios
+                            </b>
+                        </h2>
                     </center>
                   <table  align="right" >
                         <tr>
