--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/pacientes_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/pacientes_cita.html
@@ -13,7 +13,11 @@
         <div class="card">
             <div class="card-body">
                     <center> 
-                        <h2> <i class="bi bi-list-columns-reverse"> Agendamiento de Citas </i></h2>
+                        <h2 style="font-family: Lucida Calligraphy;"> 
+                            <b class="bi bi-list-columns-reverse"> 
+                                Agendamiento de Citas 
+                            </b>
+                        </h2>
                     </center> 
 
                         <!--Barra de Busqueda-->
