--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/insumo_lista.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/insumo_lista.html
@@ -10,7 +10,11 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2 <i class="bi bi-list-check"> Lista de Insumos</i> </h2>
+                    <h2> 
+                        <2 class="bi bi-list-check"> 
+                            Lista de Insumos
+                        </2> 
+                    </h2>
                 </center>
                 
              
