--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/listar_paciente2.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/listar_paciente2.html
@@ -6,9 +6,9 @@
 			<div class="card">
 				<div class="card-body">
 					<center> 
-						 <h1 style="font-family: Lucida Calligraphy;">	
-						 <b class="bi-person-lines-fill">Listado de Pacientes</b>
-						</h1> 
+						 <h2 style="font-family: Lucida Calligraphy;">	
+							<b class="bi-person-lines-fill">Lista de Pacientes</b>
+						</h2> 
 						</center>
 					<br>
 					<br>
