--- a/Proyecto2/SmileSoft/webapp/templates/usuario/modificar_password.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/modificar_password.html
@@ -10,16 +10,21 @@
     
         <div class="card">
             <br><br>
-            <center>  <h2> Cambio de Contraseña</h2> </center>    
+            <center>  
+                <h1 style="font-family: Bodoni;">
+                    <b>Cambio de Contraseña</b>
+                </h1>
+            </center>
                   <!-- Tooltip. -->
                 <div class="container mt-3 text-center">
-                    <small> <b>   ¡ Ingrese la nueva contraseña ! </small>
+                    <i class="bi bi-pencil-square">
+                        ¡ Ingrese la nueva contraseña !
+                    </i>
                 </div>
             
             <div class="card-body">
                 <form method="POST">
-                    {% csrf_token %}     
-
+                    {% csrf_token %}
                      {%if mensaje%}
                             <div class="alert alert-success" role="alert">
                                   ✅ Contraseña Modificada
@@ -28,7 +33,7 @@
 
                     <div style="margin: 20px;" >
                         <div style="margin: 10px;">
-                            
+
                             {% if form.password1.errors %}
                                 {% for error in form.password1.errors %}
                                   <li class="list-group-item list-group-item-warning">
@@ -36,8 +41,10 @@
                                   </li>
                                 {% endfor %}
                             {% endif %}
-                            {{ form.password1.label }}
-                            {{ form.password1 }}
+                            <div class="form-group">
+                                <label for="{{form.password1.name}}"><b>{{form.password1.label}}</b></label>
+                                {{form.password1}}
+                             </div>
                         </div>
 
                         <div style="margin: 10px;">
@@ -48,14 +55,22 @@
                                   </li>
                                 {% endfor %}
                             {% endif %}
-                            {{ form.password2.label }}
-                            {{ form.password2 }}
+                            <div class="form-group">
+                                <label for="{{form.password2.name}}"><b>{{form.password2.label}}</b></label>
+                                {{form.password2}}
+                             </div>
                         </div>
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-primary" onclick="guardar()"  type="submit" style="margin: 10px;">Cambiar mi contraseña</button>
-                        <a href="/panel_control/inicio/" class="btn btn-danger" style="margin: 10px;">Cancelar</a>
+                        <button class="btn btn-primary" onclick="guardar()"  type="submit" style="margin: 10px;">
+                            <i class="bi bi-pencil-square"></i>
+                            Cambiar mi contraseña
+                        </button>
+                        <a onclick="history.back()" class="btn btn-danger" style="margin: 10px;">
+                            <i class="bi bi-x-circle"></i>
+                            Cancelar
+                        </a>
                     </div>
                 
                                  {% comment %} <script>
